# esk

./: README.md
key1/: Cargo.toml
key1/src/: main.rs
wwwww-misc/: README.md
wwwww-misc/000/: readme.md  zzzzrun.bat
wwwww-misc/000/src/: main.rs
wwwww-misc/111/: Cargo.toml  readme.md
wwwww-misc/111/src/: main.rs
wwwww-misc/Feistel-Network/: Cargo.toml  readme.md
wwwww-misc/Feistel-Network/src/: main.rs
wwwww-misc/OTP/: Cargo.toml  README.md
wwwww-misc/OTP/src/: main.rs
wwwww-misc/SPN-custom/: Cargo.toml  r1.bat  readme.md
wwwww-misc/SPN-custom/src/: main.rs
wwwww-misc/TINYencryption/: README.md
wwwww-misc/aaa/otp/: readme.md
wwwww-misc/aes-siv/: Cargo.toml  README.md  aes_verification_readme.md
wwwww-misc/argon2/: Cargo.toml  README.md
wwwww-misc/argon2/src/: main.rs
wwwww-misc/binary_analyzer/: Cargo.toml
wwwww-misc/cha/: Cargo.toml  readme.md
wwwww-misc/crypt/: read.html
wwwww-misc/keyscramble/: Cargo.toml  readme.md
wwwww-misc/prod-otp/: README.md
wwwww-misc/secureKeygen/: Cargo.toml  readme.md
wwwww-misc/secureKeygen000/: main.rs
wwwww-misc/secureKeygen1/: Cargo.toml  readme.md
wwwww-misc/windev/: Cargo.toml  README.md
wwwww-misc/xotp/: Cargo.toml  readme.md
xor0/src/: main.rs
xor00/src/: main.rs
xor000/: Cargo.toml
xor000/src/: main.rs
xor0000/: Cargo.toml
xor0000/src/: main.rs
xor1/: Cargo.toml  error.txt
xor1/src/: main.rs
xor2/: Cargo.toml  read.html
xor2/src/: main.rs
xor3/: README.md  read.html  read1.html
xor3/src/: main.rs
zzzxor-main-1/: Cargo.toml  README.md
(+50 files in other folders)
